--- a/support/index.html
+++ b/support/index.html
@@ -42,7 +42,9 @@ layout: null
   <li><a href="https://docs.microsoft.com/en-us/deployedge/microsoft-edge-relnote-stable-channel/" data-custom-event="true" data-custom-category="custom event" data-custom-label="Microsoft Edge">Microsoft Edge</a></li>
 </ul>
 
-<br>
+<p>Our development team analyzes global <a href="https://gs.statcounter.com/" data-custom-event="true" data-custom-category="custom event" data-custom-label="browser market share">browser market share</a> and client web traffic data on a quarterly basis. Web browser support ends when that browser represents less than 5% of all market share and/or web traffic.</p>
+
+<p>We do not, as a matter of course, support browsers that are not listed within this document. Should your users or company's browser needs differ, please consult your account representative immediately.</p>
 
 <h2 id="email-support">Email Support</h2>
 
@@ -60,9 +62,7 @@ layout: null
   <li>Gmail Android (Upon Request Only) [Not all designs can be built responsively]</li>
 </ul>
 
-<p>Our development team analyzes global <a href="https://gs.statcounter.com/" data-custom-event="true" data-custom-category="custom event" data-custom-label="browser market share">browser market share</a> and client web traffic data on a quarterly basis. Web browser support ends when that browser represents less than 5% of all market share and/or web traffic.</p>
-
-<p>We do not, as a matter of course, support browsers that are not listed within this document. Should your users or company's browser needs differ, please consult your account representative immediately.</p>
+<h2 id="modified-browsers">Modified Browsers</h2>
 
 <p><em>Please note that we do not support browsers that have been modified, run in compatibility mode, or filter out code via proxy filtering that is required for the normal operation of your site.</em></p>
 
@@ -79,12 +79,12 @@ layout: null
 <h3 id="update-log">Update Log</h3>
 
 <ul>
-  <li><b>September 25th, 2020</b> - Updated <a href="#email-support">Email Support</a>.</li>
-  <li><b>April 28th, 2020</b> - Android 10.x and Android 9.x added and Android 7.x and Android 6.x removed from <a href="#operating-system-support">Operating System Support</a>.</li>
-  <li><b>March 14th, 2020</b> - macOS 10.15 (Catalina) support added and macOS 10.14 (Mojave) removed from from <a href="#operating-system-support">Operating System Support</a>.</li>
-  <li><b>March 1st, 2020</b> - iOS 13.x support added and iOS 12.x removed from <a href="#operating-system-support">Operating System Support</a>.</li>
-  <li><b>January 1st, 2020</b> - Internet Explorer 11 added to <a href="#limited-support">Limited Support</a>.</li>
-  <li><b>March 4th, 2019</b> - macOS 10.14 (Mojave) support added and macOS 10.12 (Sierra) removed from from <a href="#operating-system-support">Operating System Support</a>.</li>
+  <li><b>September 25, 2020</b> - Updated <a href="#email-support">Email Support</a>.</li>
+  <li><b>April 28, 2020</b> - Android 10.x and Android 9.x added and Android 7.x and Android 6.x removed from <a href="#operating-system-support">Operating System Support</a>.</li>
+  <li><b>March 14, 2020</b> - macOS 10.15 (Catalina) support added and macOS 10.14 (Mojave) removed from from <a href="#operating-system-support">Operating System Support</a>.</li>
+  <li><b>March 1, 2020</b> - iOS 13.x support added and iOS 12.x removed from <a href="#operating-system-support">Operating System Support</a>.</li>
+  <li><b>January 1, 2020</b> - Internet Explorer 11 added to <a href="#limited-support">Limited Support</a>.</li>
+  <li><b>March 4, 2019</b> - macOS 10.14 (Mojave) support added and macOS 10.12 (Sierra) removed from from <a href="#operating-system-support">Operating System Support</a>.</li>
 </ul>
 
 <br>
