REvenge of the TH

--- a/support/index.html
+++ b/support/index.html
@@ -2,7 +2,7 @@
 layout: null
 ---
 
-<p class="effective-date">Last updated <time>September 25th, 2020</time></p>
+<p class="effective-date">Last updated <time>September 25, 2020</time></p>
 
 <h2 id="web-standards">Web Standards</h2>
 
