--- a/support/index.html
+++ b/support/index.html
@@ -2,6 +2,14 @@
 layout: null
 ---
 
+<style>
+
+#rad-syndicate ul {
+margin-bottom: 1em;
+}
+
+</style>
+
 <p class="effective-date">Last updated <time>September 25, 2020</time></p>
 
 <h2 id="web-standards">Web Standards</h2>
@@ -28,8 +36,6 @@ layout: null
   <li>Android 9.x</li>
   <li>Android 8.x</li>
 </ul>
-
-<br>
 
 <h2 id="browser-support">Browser Support</h2>
 
@@ -74,8 +80,6 @@ layout: null
   <li>Internet Explorer 11</li>
 </ul>
 
-<br>
-
 <h3 id="update-log">Update Log</h3>
 
 <ul>
@@ -86,5 +90,3 @@ layout: null
   <li><b>January 1, 2020</b> - Internet Explorer 11 added to <a href="#limited-support">Limited Support</a>.</li>
   <li><b>March 4, 2019</b> - macOS 10.14 (Mojave) support added and macOS 10.12 (Sierra) removed from from <a href="#operating-system-support">Operating System Support</a>.</li>
 </ul>
-
-<br>
