--- a/support/index.html
+++ b/support/index.html
@@ -4,6 +4,14 @@ layout: null
 
 <style>
 
+#rad-syndicate h2, #rad-syndicate h3 {
+font-weight: 600;
+}
+
+#rad-syndicate a {
+text-decoration: underline;
+}
+
 #rad-syndicate ul {
 margin-bottom: 1em;
 }
