--- a/support/index.html
+++ b/support/index.html
@@ -4,6 +4,8 @@ layout: null
 
 <style>
 
+/* Temporary Styling */
+
 #rad-syndicate h2, #rad-syndicate h3 {
 font-weight: 600;
 }
@@ -14,6 +16,10 @@ text-decoration: underline;
 
 #rad-syndicate ul {
 margin-bottom: 1em;
+}
+
+#rad-syndicate #update-log + ul {
+margin-bottom: 3em;
 }
 
 </style>
