--- a/support/index.html
+++ b/support/index.html
@@ -71,15 +71,15 @@ margin-bottom: 3em;
 <p>Corresponding to the date on which your project has launched and due to the vast technical differences in email client software, we test all text and HTML based emails in the following primary email client:</p>
 
 <ul>
-  <li>Gmail Desktop (Latest browser versions only, except for Internet Explorer 11)</li>
+  <li><strong>Gmail Desktop</strong> (Latest browser versions only, except for Internet Explorer 11)</li>
 </ul>
 
 <p>Additionally, we test all text and HTML based emails on the following email clients. These may have differences in spacing and sizing of elements that vary from the primary testing email client:</p>
 
 <ul>
-  <li>Outlook (Latest version of Outlook on Windows 10 only) [Does not support responsive emails]</li>
-  <li>iPhone (Latest version of iOS Mail only) [Not all designs can be built responsively]</li>
-  <li>Gmail Android (Upon Request Only) [Not all designs can be built responsively]</li>
+  <li><strong>Outlook</strong> (Latest version of Outlook on Windows 10 only) [Does not support responsive emails]</li>
+  <li><strong>iPhone</strong> (Latest version of iOS Mail only) [Not all designs can be built responsively]</li>
+  <li><strong>Gmail Android</strong> (Upon Request Only) [Not all designs can be built responsively]</li>
 </ul>
 
 <h2 id="modified-browsers">Modified Browsers</h2>
