--- a/support/index.html
+++ b/support/index.html
@@ -102,5 +102,5 @@ margin-bottom: 3em;
   <li><b>March 14, 2020</b> - macOS 10.15 (Catalina) support added and macOS 10.14 (Mojave) removed from from <a href="#operating-system-support">Operating System Support</a>.</li>
   <li><b>March 1, 2020</b> - iOS 13.x support added and iOS 12.x removed from <a href="#operating-system-support">Operating System Support</a>.</li>
   <li><b>January 1, 2020</b> - Internet Explorer 11 added to <a href="#limited-support">Limited Support</a>.</li>
-  <li><b>March 4, 2019</b> - macOS 10.14 (Mojave) support added and macOS 10.12 (Sierra) removed from from <a href="#operating-system-support">Operating System Support</a>.</li>
+  <li><b>March 4, 2019</b> - macOS 10.14 (Mojave) support added and macOS 10.12 (Sierra) removed from <a href="#operating-system-support">Operating System Support</a>.</li>
 </ul>
