--- a/a11y/testing/boilerplate/index.html
+++ b/a11y/testing/boilerplate/index.html
@@ -4,7 +4,7 @@ layout: null
 
 <html lang="en-US">
 <head>
-  <meta http-equiv="refresh" content="5; URL=<meta http-equiv="refresh" content="0; URL=https://www.bitdegree.org/">
+  <meta http-equiv="refresh" content="0; URL=https://docs.google.com/spreadsheets/d/1Ar2fbSmm236sIRqivwyKa9sCmF5z8SJAVwaum5KEwoQ/edit?usp=sharing">
   <title>Accessibility Testing Boilerplate</title>
 </head>
 
