--- a/support/index.html
+++ b/support/index.html
@@ -15,6 +15,7 @@ text-decoration: underline;
 }
 
 #rad-syndicate ul {
+margin-left: 1em;
 margin-bottom: 1em;
 }
 
@@ -24,7 +25,7 @@ margin-bottom: 3em;
 
 </style>
 
-<p class="effective-date">Last updated <time>September 25, 2020</time></p>
+<p class="effective-date">Last updated <time>March 1, 2020</time></p>
 
 <h2 id="web-standards">Web Standards</h2>
 
@@ -34,7 +35,7 @@ margin-bottom: 3em;
 
 <h2 id="accessibility">Accessibility</h2>
 
-<p>At {{ site.company-name }}, we believe that all of your prospective job candidates, regardless of physical, mental or technological capabilities, have a right to learn more about your company and access all job listings. To preserve an individual’s right to universal access, we <em>attempt</em> to meet as much of <strong>WCAG (Web Content and Accessibility Guidelines) 2.1 Level A and AA</strong> as possible, within our everyday process. However, if there is a need to fully support WCAG or other specific guidelines, please bring this to the attention of your account representative as soon as possible.</p>
+<p>At {{ site.company-name }}, we believe that all of your prospective job candidates, regardless of physical, mental or technological capabilities, have a right to learn more about your company and access all job listings. To preserve an individual’s right to universal access, <a href="https://radancy.dev/a11y/baseline/">we attempt to meet</a> as much of <strong>WCAG (Web Content and Accessibility Guidelines) 2.1 Level A and AA</strong> as possible, within our everyday process. However, if there is a need to fully support a specific level of WCAG or other specific guidelines, please bring this to the attention of your account representative as soon as possible.</p>
 
 <h2 id="operating-system-support">Operating System Support</h2>
 
@@ -44,11 +45,11 @@ margin-bottom: 3em;
   <li>Windows 10</li>
   <li>Windows 8/8.1</li>
   <li>macOS 10.15 (Catalina)</li>
+  <li>iOS 14.x</li>
   <li>iOS 13.x</li>
-  <li>iOS 12.x</li>
+  <li>Android 11.x</li>
   <li>Android 10.x</li>
   <li>Android 9.x</li>
-  <li>Android 8.x</li>
 </ul>
 
 <h2 id="browser-support">Browser Support</h2>
@@ -84,23 +85,27 @@ margin-bottom: 3em;
 
 <h2 id="modified-browsers">Modified Browsers</h2>
 
-<p><em>Please note that we do not support browsers that have been modified, run in compatibility mode, or filter out code via proxy filtering that is required for the normal operation of your site.</em></p>
+<p>Please note that we do not support browsers that have been modified, run in compatibility mode, or remove code via proxy filtering that is required for the normal operation of your site.</p>
 
 <h2 id="limited-support">Limited Browser Support</h2>
 
-<p>The following browser(s) falls under limited support. This is a base level of support which provides core content, functionality and base styling. Due to a lack of support for more advanced features and styling capabilities in these browsers, issues of an aesthetic nature are not typically addressed unless they directly interfere with the usability of the website. Any questions or concerns regarding this level of support can be communicated to the project's account team.</p>
+<p>The following browser(s) falls under limited support:</p>
 
 <ul>
   <li>Internet Explorer 11</li>
 </ul>
 
+<p>This is a base level of support which provides core content, functionality and base styling. Due to a lack of support for more advanced features and styling capabilities in these browsers, issues of an aesthetic nature are not typically addressed unless they directly interfere with the usability of the website. Any questions or concerns regarding this level of support can be communicated to the project's account team.</p>
+
 <h3 id="update-log">Update Log</h3>
 
 <ul>
+  <li><b>March 1, 2020</b> - iOS 14.x added and iOS 12.x removed from <a href="#operating-system-support">Operating System Support</a>.</li>
+  <li><b>March 1, 2020</b> - Android 11.x support added and Android 8.x removed from <a href="#operating-system-support">Operating System Support</a>.</li>
   <li><b>September 25, 2020</b> - Updated <a href="#email-support">Email Support</a>.</li>
   <li><b>April 28, 2020</b> - Android 10.x and Android 9.x added and Android 7.x and Android 6.x removed from <a href="#operating-system-support">Operating System Support</a>.</li>
   <li><b>March 14, 2020</b> - macOS 10.15 (Catalina) support added and macOS 10.14 (Mojave) removed from <a href="#operating-system-support">Operating System Support</a>.</li>
-  <li><b>March 1, 2020</b> - iOS 13.x support added and iOS 12.x removed from <a href="#operating-system-support">Operating System Support</a>.</li>
+  <li><b>March 1, 2020</b> - iOS 13.x added and iOS 12.x removed from <a href="#operating-system-support">Operating System Support</a>.</li>
   <li><b>January 1, 2020</b> - Internet Explorer 11 added to <a href="#limited-support">Limited Support</a>.</li>
-  <li><b>March 4, 2019</b> - macOS 10.14 (Mojave) support added and macOS 10.12 (Sierra) removed from <a href="#operating-system-support">Operating System Support</a>.</li>
+  <li><b>March 4, 2019</b> - macOS 10.14 (Mojave) added and macOS 10.12 (Sierra) removed from <a href="#operating-system-support">Operating System Support</a>.</li>
 </ul>
