--- a/support/index.html
+++ b/support/index.html
@@ -15,8 +15,9 @@ text-decoration: underline;
 }
 
 #rad-syndicate ul {
-margin-left: 1em;
+list-style: initial;
 margin-bottom: 1em;
+margin-left: 1em;
 }
 
 #rad-syndicate #update-log + ul {
