--- a/a11y/extension/index.html
+++ b/a11y/extension/index.html
@@ -4,13 +4,13 @@
   <base target="_blank">
   <link href="https://radancy.dev/pattern-library/disclosure-multiple/init.css" rel="stylesheet">
   <link href="init.css" rel="stylesheet">
-  <title>Accessibility Check</title>
+  <title>A11y Smoke Test</title>
 <head>
 <body>
 
 <main>
 
-  <h1>Accessibility Check</h1>
+  <h1>A11y Smoke Test</h1>
 
   <button data-script="https://rawgit.com/pauljadam/bookmarklets/master/reset.js">Reset Page</button>
 
@@ -366,7 +366,6 @@
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <script src="https://radancy.dev/pattern-library/disclosure-multiple/init.js"></script>
-
 <script src="init.js"></script>
 
 </body>
