--- a/a11y/extension/index.html
+++ b/a11y/extension/index.html
@@ -5,7 +5,7 @@
   <link href="https://radancy.dev/pattern-library/disclosure-multiple/init.css" rel="stylesheet">
   <link href="init.css" rel="stylesheet">
   <title>A11y Smoke Test</title>
-<head>
+</head>
 <body>
 
 <main>
