--- a/a11y/extension/index.html
+++ b/a11y/extension/index.html
@@ -10,6 +10,8 @@
 
 <main>
 
+  <img src="img/logo.png" alt="Radancy Logo with Universal Access Icon.">
+
   <h1>A11y Smoke Test</h1>
 
   <button data-script="https://rawgit.com/pauljadam/bookmarklets/master/reset.js">Reset Page</button>
