--- a/a11y/extension/index.html
+++ b/a11y/extension/index.html
@@ -13,7 +13,7 @@
 
 <main>
 
-  <h1><img src="img/logo.png" alt="Accessibility Smoke Test"></h1>
+  <h1><img src="img/logo.png" width="200" height="43" alt="Accessibility Smoke Test"></h1>
 
   <button aria-label="Reset Page" class="btn reset" data-script="https://rawgit.com/pauljadam/bookmarklets/master/reset.js"></button>
 
