Form Field Updates

--- a/a11y/extension/index.html
+++ b/a11y/extension/index.html
@@ -123,17 +123,17 @@
 
               <legend>Link Contrast Checker</legend>
 
-              <label>Link Color</label>
+              <label for="lcolor-1">Link Color</label>
 
-              <input type="color" name="lcolor" id="lcolor">
+              <input type="color" name="lcolor" id="lcolor-1">
 
-              <label>Background Color</label>
+              <label for="fcolor-1">Background Color</label>
 
-              <input type="color" name="fcolor" value="#cccccc" id="fcolor">
+              <input type="color" name="fcolor" value="#cccccc" id="fcolor-1">
 
-              <label>Body Text Color</label>
+              <label for="bcolor-1">Body Text Color</label>
 
-              <input type="color" name="bcolor" id="bcolor">
+              <input type="color" name="bcolor" id="bcolor-1">
 
             </fieldset>
 
@@ -254,13 +254,13 @@
 
               <legend>Contrast Checker</legend>
 
-              <label>Foreground Color</label>
+              <label for="fcolor-2">Foreground Color</label>
 
-              <input type="color" name="fcolor" id="fcolor">
+              <input type="color" name="fcolor" id="fcolor-2">
 
-              <label>Background Color</label>
+              <label for="bcolor-2">Background Color</label>
 
-              <input type="color" name="bcolor" id="bcolor">
+              <input type="color" name="bcolor" id="bcolor-2">
 
             </fieldset>
 
@@ -286,13 +286,13 @@
 
               <legend>Contrast Checker</legend>
 
-              <label>Foreground Color</label>
+              <label for="fcolor-3">Foreground Color</label>
 
-              <input type="color" name="fcolor" id="fcolor">
+              <input type="color" name="fcolor" id="fcolor-3">
 
-              <label>Background Color</label>
+              <label for="bcolor-3">Background Color</label>
 
-              <input type="color" name="bcolor" id="bcolor">
+              <input type="color" name="bcolor" id="bcolor-3">
 
             </fieldset>
 
@@ -373,4 +373,4 @@
 <script src="init.js"></script>
 
 </body>
-<html>
+</html>
