--- a/a11y/index.html
+++ b/a11y/index.html
@@ -1,8 +1,6 @@
 ---
-title: "Accessibility"
+title: "Accessibility at Radancy"
 ---
-
-<h1>Accessibility at Radancy</h1>
 
 <ul>
   <li><a href="https://amp.levelaccess.net/login.php">Level Access AMP</a></li>
