--- a/a11y/extension/index.html
+++ b/a11y/extension/index.html
@@ -60,7 +60,7 @@
             <ul>
               <li><button data-script="https://rawgit.com/pauljadam/bookmarklets/master/images.js">Images</button></li>
               <li><button data-script="a11y-smoketest-grayscale">Grayscale</button></li>
-              <li><button data-script="a11y-smoketest-textspace">Text Space</button></li>
+              <li><button class="alert-dialoge" data-script="a11y-smoketest-textspace">Text Space</button></li>
               <li><button data-script="https://mraccess77.github.io/favlets/duplicateIds.js">Duplicate ID</button></li>
             </ul>
 
@@ -129,19 +129,19 @@
 
               <fieldset>
 
-                <legend>Link Contrast Checker</legend>
+                <legend>Link Contrast Check</legend>
 
                 <label for="lcolor-1">Link Color</label>
 
                 <input id="lcolor-1" name="lcolor" type="color">
 
-                <label for="fcolor-1">Background Color</label>
-
-                <input id="fcolor-1" name="fcolor" type="color">
-
-                <label for="bcolor-1">Body Text Color</label>
+                <label for="bcolor-1">Background Color</label>
 
                 <input id="bcolor-1" name="bcolor" type="color">
+
+                <label for="fcolor-1">Body Text Color</label>
+
+                <input id="fcolor-1" name="fcolor" type="color">
 
                 <button class="btn">Submit</button>
 
@@ -260,7 +260,7 @@
 
               <fieldset>
 
-                <legend>Contrast Checker</legend>
+                <legend>Contrast Check</legend>
 
                 <label for="fcolor-2">Foreground Color</label>
 
@@ -292,7 +292,7 @@
 
               <fieldset>
 
-                <legend>Contrast Checker</legend>
+                <legend>Contrast Check</legend>
 
                 <label for="fcolor-3">Foreground Color</label>
 
