--- a/a11y/extension/index.html
+++ b/a11y/extension/index.html
@@ -59,9 +59,15 @@
 
             <ul>
               <li><button data-script="https://rawgit.com/pauljadam/bookmarklets/master/images.js">Images</button></li>
-              <li><button data-script="a11y-smoketest-grayscale">Grayscale</button></li>
               <li><button class="alert-dialoge" data-script="a11y-smoketest-textspace">Text Space</button></li>
               <li><button data-script="https://mraccess77.github.io/favlets/duplicateIds.js">Duplicate ID</button></li>
+              <li><button data-script="a11y-smoketest-protanopia">Protanopia (No Red)</button></li>
+              <li><button data-script="a11y-smoketest-protanomaly">Protanomaly</button></li>
+              <li><button data-script="a11y-smoketest-deuteranopia">Deuteranopia (No Green)</button></li>
+              <li><button data-script="a11y-smoketest-deuteranomaly">Deuteranomaly</button></li>
+              <li><button data-script="a11y-smoketest-tritanopia">Tritanopia (No Blue)</button></li>
+              <li><button data-script="a11y-smoketest-achromatopsia">Achromatopsia</button></li>
+              <li><button data-script="a11y-smoketest-achromatomaly">Achromatomaly</button></li>
             </ul>
 
             <h2>Resources</h2>
