--- a/a11y/extension/index.html
+++ b/a11y/extension/index.html
@@ -8,17 +8,19 @@
   <link href="img/icon-32.png" rel="icon">
   <title>Radancy: Accessibility Smoke Test Extension</title>
 </head>
-<body>
+<body id="index">
 
   <header>
 
-    <h1><img alt="Radancy: Accessibility Smoke Test" height="47" src="img/logo.png" width="200"></h1>
+    <img alt="Radancy" height="47" src="img/logo.png" width="200">
 
     <button aria-label="Reset Page" class="btn reset" id="btn-reset"></button>
 
   </header>
 
   <main>
+
+    <h1 class="heading-small">Accessibility Smoke Test</h1>
 
     <div class="disclosure-multiple">
 
@@ -43,6 +45,10 @@
               <li><a aria-label="HTML Validation (Opens in new tab)" href="https://validator.w3.org/" id="validate-html" rel="noopener">Validate HTML</a></li>
               <li><a aria-label="CSS Validation (Opens in new tab)" href="http://jigsaw.w3.org/css-validator/" id="validate-css" rel="noopener">Validate CSS</a></li>
               <li><a aria-label="PDF Validation (Opens in new tab)" href="http://checkers.eiii.eu/en/pdfcheck/" id="validate-pdf" rel="noopener">Validate PDF</a></li>
+              <li><a aria-label="View Heading-Level Outline (Opens in new tab)" href="outline.html" id="view-heading-outline" rel="noopener">View Heading-Level Outline</a></li>
+
+              <!-- https://validator.w3.org/nu/?showoutline=yes&doc=https://spectrum-pb.runmytests.com/#headingoutline -->
+
             </ul>
 
           </div>
@@ -59,15 +65,6 @@
 
             <ul>
               <li><button data-script="https://rawgit.com/pauljadam/bookmarklets/master/images.js">Images</button></li>
-              <li><button class="alert-dialoge" data-script="a11y-smoketest-textspace">Text Space</button></li>
-              <li><button data-script="https://mraccess77.github.io/favlets/duplicateIds.js">Duplicate ID</button></li>
-              <li><button data-script="a11y-smoketest-protanopia">Protanopia (No Red)</button></li>
-              <li><button data-script="a11y-smoketest-protanomaly">Protanomaly</button></li>
-              <li><button data-script="a11y-smoketest-deuteranopia">Deuteranopia (No Green)</button></li>
-              <li><button data-script="a11y-smoketest-deuteranomaly">Deuteranomaly</button></li>
-              <li><button data-script="a11y-smoketest-tritanopia">Tritanopia (No Blue)</button></li>
-              <li><button data-script="a11y-smoketest-achromatopsia">Achromatopsia</button></li>
-              <li><button data-script="a11y-smoketest-achromatomaly">Achromatomaly</button></li>
             </ul>
 
             <h2>Resources</h2>
@@ -88,7 +85,7 @@
 
             <h2>Test</h2>
 
-            <p>TBD</p>
+            <p>Multimedia on a page should be reviewed carefully.</p>
 
             <h2>Resources</h2>
 
@@ -130,6 +127,16 @@
             <p>Don't use presentation that relies solely on color. <a href="https://www.w3.org/WAI/WCAG21/Understanding/use-of-color">Understanding 1.4.1</a></p>
 
             <h2>Test</h2>
+
+            <ul>
+              <li><button data-script="a11y-smoketest-protanopia">Protanopia (No Red)</button></li>
+              <li><button data-script="a11y-smoketest-protanomaly">Protanomaly</button></li>
+              <li><button data-script="a11y-smoketest-deuteranopia">Deuteranopia (No Green)</button></li>
+              <li><button data-script="a11y-smoketest-deuteranomaly">Deuteranomaly</button></li>
+              <li><button data-script="a11y-smoketest-tritanopia">Tritanopia (No Blue)</button></li>
+              <li><button data-script="a11y-smoketest-achromatopsia">Achromatopsia</button></li>
+              <li><button data-script="a11y-smoketest-achromatomaly">Achromatomaly</button></li>
+            </ul>
 
             <form action="https://webaim.org/resources/linkcontrastchecker/">
 
@@ -177,10 +184,10 @@
 
             <h2>Test</h2>
 
+            <p>Tab through and engage with interactive components on the page. In short, anything that can be used with a pointing device, such as a mouse, must be equally usable via keyboard. If focus outlines have been supressed, you can force them with:</p>
+
             <ul>
               <li><button data-script="https://rawgit.com/pauljadam/bookmarklets/master/focus.js">Force Focus</button></li>
-              <li><button data-script="https://mraccess77.github.io/favlets/focusOrder.js">Focus Order</button></li>
-              <li><button data-script="https://rawgit.com/pauljadam/bookmarklets/master/tabindex.js">Tabindex</button></li>
             </ul>
 
           </div>
@@ -193,6 +200,10 @@
 
             <p>Provide user controls for moving content. <a href="https://www.w3.org/WAI/WCAG21/Understanding/pause-stop-hide">Understanding 2.2.2</a></p>
 
+            <h2>Test</h2>
+
+            <p>Anthing that automatically moves on a webpage, such as a carousel or video, must have a pause button. Web animation is exempt from this rule, but it is strongly reccomended that development leverage <a aria-label="prefers-reduced-motion (Opens in new tab)" href="https://developer.mozilla.org/en-US/docs/Web/CSS/@media/prefers-reduced-motion" rel="noopener">prefers-reduced-motion</a> in their work.</p>
+
           </div>
 
           <button class="disclosure-multiple__button">2.3.1: Three Flashes or Below Threshold (Level A)</button>
@@ -202,6 +213,14 @@
             <h2>Overview</h2>
 
             <p>No content flashes more than three times per second.	<a href="https://www.w3.org/WAI/WCAG21/Understanding/three-flashes-or-below-threshold">Understanding 2.3.1</a></p>
+
+            <h2>Test</h2>
+
+            <p>A high rate of flashing can cause potential harm, or even death, in individuals with epilepsy. If you suspect that an element on a page may be harmful, you can reach out to <a href="mailto:michael.spellacy@radancy.com">Michael Spellacy</a> or run the following app on a webpage yourself:</p>
+
+            <ul>
+              <li><a aria-label="Download PEAT (Opens in new tab)" href="https://trace.umd.edu/peat/" rel="noopener">Download PEAT</a></li>
+            </ul>
 
           </div>
 
@@ -213,6 +232,18 @@
 
             <p>Provide a 'Skip to Content' link. <a href="https://www.w3.org/WAI/WCAG21/Understanding/bypass-blocks">Understanding 2.4.1</a></p>
 
+            <h2>Test</h2>
+
+            <p>Areas of a webpage that may be cumbersome to navigate through via keyboard or assistive technology, must provide a mechanisim to skip over that content. These "Skip" links should be available to all users when needed and not obscure other content on the page when visible. You will often find these links placed before a websites primary navigation.</p>
+
+            <figure>
+
+              <img alt="" src="img/example-skip-link.png">
+
+              <figcaption>An example of a "Skip" link. These links, when present, will display when keyboard testing is performed.</figcaption>
+
+            </figure>
+
           </div>
 
           <button class="disclosure-multiple__button">2.4.2: Page Titled (Level A)</button>
@@ -222,6 +253,14 @@
             <h2>Overview</h2>
 
             <p>Use helpful and clear page titles.	<a href="https://www.w3.org/WAI/WCAG21/Understanding/page-titled">Understanding 2.4.2</a></p>
+
+            <h2>Test</h2>
+
+            <p>Ensure that all pages have a title and that it is useful and adequetly describes the page at hand:</p>
+
+            <ul>
+              <li><button data-script="js/page-title.js">Show Title</button></li>
+            </ul>
 
           </div>
 
@@ -262,6 +301,16 @@
 
             <h2>Test</h2>
 
+            <ul>
+              <li><button data-script="a11y-smoketest-protanopia">Protanopia (No Red)</button></li>
+              <li><button data-script="a11y-smoketest-protanomaly">Protanomaly</button></li>
+              <li><button data-script="a11y-smoketest-deuteranopia">Deuteranopia (No Green)</button></li>
+              <li><button data-script="a11y-smoketest-deuteranomaly">Deuteranomaly</button></li>
+              <li><button data-script="a11y-smoketest-tritanopia">Tritanopia (No Blue)</button></li>
+              <li><button data-script="a11y-smoketest-achromatopsia">Achromatopsia</button></li>
+              <li><button data-script="a11y-smoketest-achromatomaly">Achromatomaly</button></li>
+            </ul>
+
             <form action="https://webaim.org/resources/contrastchecker/">
 
               <fieldset>
@@ -293,6 +342,16 @@
             <p>Contrast ratio between text and background is at least 4.5:1. <a href="https://www.w3.org/WAI/WCAG21/Understanding/contrast-minimum">Understanding 1.4.3</a></p>
 
             <h2>Test</h2>
+
+            <ul>
+              <li><button data-script="a11y-smoketest-protanopia">Protanopia (No Red)</button></li>
+              <li><button data-script="a11y-smoketest-protanomaly">Protanomaly</button></li>
+              <li><button data-script="a11y-smoketest-deuteranopia">Deuteranopia (No Green)</button></li>
+              <li><button data-script="a11y-smoketest-deuteranomaly">Deuteranomaly</button></li>
+              <li><button data-script="a11y-smoketest-tritanopia">Tritanopia (No Blue)</button></li>
+              <li><button data-script="a11y-smoketest-achromatopsia">Achromatopsia</button></li>
+              <li><button data-script="a11y-smoketest-achromatomaly">Achromatomaly</button></li>
+            </ul>
 
             <form action="https://webaim.org/resources/contrastchecker/">
 
@@ -326,8 +385,13 @@
 
             <h2>Test</h2>
 
+            <p>Tab through and engage with interactive components on the page to review their focus states. Default focus outlines are a browser feature, meant to aid those with low vision, and should <em>never</em> be removed without an adequate replacement. Outlines can be redesigned or an alternative focus state can be used. Any redesigned outline and all focus state must meet a 3:1 contrast ratio.</p>
+
+            <p>Related issues to be aware of when testing focus are the order in which elements are in when tabbed to. If tab stops are not in a fairly linear order, then this should be flagged. An interactive element with a tabindex other than 0 or -1 will interfere with a pages natural tab order.</p>
+
             <ul>
-              <li><button data-script="https://rawgit.com/pauljadam/bookmarklets/master/focus.js">Force Focus</button></li>
+              <li><button data-script="https://mraccess77.github.io/favlets/focusOrder.js">View Focus Order</button></li>
+              <li><button data-script="https://rawgit.com/pauljadam/bookmarklets/master/tabindex.js">View Tabindexs</button></li>
             </ul>
 
           </div>
@@ -336,10 +400,51 @@
 
           <div class="disclosure-multiple__content">
 
+            <h2>Browser Plugins</h2>
+
+            <p>More advanced testing can be performed with the following tools:</p>
+
             <ul>
               <li><button data-script="https://www.ssa.gov/accessibility/andi/andi.js">ANDI</button></li>
               <li><button data-script="https://khan.github.io/tota11y/dist/tota11y.min.js">Tota11y</button></li>
               <li><button data-script="https://rawgit.com/pauljadam/bookmarklets/master/axe.js">aXe Results</button></li>
+            </ul>
+
+            <h2>Screen Readers</h2>
+
+            <p>Good testers listen to and engage with an interface via assistive technology.</p>
+
+            <ul>
+              <li><a aria-label="NVDA (Free, Opens in new tab)" href="https://www.nvaccess.org/download/" rel="noopener">NVDA (Free)</a><li>
+              <li><a aria-label="JAWS (Paid, 30 Minute Mode, Opens in new tab)" href="https://support.freedomscientific.com/Downloads/JAWS" rel="noopener">JAWS (Paid, 30 Minute Mode)</a></li>
+              <li><a aria-label="Windows Narrator (Opens in new tab)" href="https://support.microsoft.com/en-us/windows/hear-text-read-aloud-with-narrator-040f16c1-4632-b64e-110a-da4a0ac56917" rel="noopener">Windows Narrator</a></li>
+              <li><a aria-label="VoiceOver for Mac (Opens in new tab)" href="https://support.apple.com/guide/mac-help/change-voiceover-preferences-accessibility-mh40578/mac">VoiceOver for Mac</a></li>
+            </ul>
+
+            <h2>Advanced Testing</h2>
+
+            <p>More advanced tools can be used by specialized accessibility testers.</p>
+
+            <ul>
+              <li><a href="https://amp.levelaccess.net/login.php">Level Access AMP</a>
+
+                  <h2>Access Assistant</h2>
+
+                  <ul>
+                    <li><a href="https://amp.levelaccess.net/download/assistant.php?version=2&amp;browser=chrome" rel="noopener">Chrome Extension</a></li>
+                    <li><a href="https://amp.levelaccess.net/download/assistant.php?version=2&amp;browser=firefox" rel="noopener">Firefox Plugin</a></li>
+                    <li><a href="https://amp.levelaccess.net/download/assistant.php?version=2&amp;browser=edge" rel="noopener">Edge Extension (Beta)</a></li>
+                    <li><a href="https://amp.levelaccess.net/download/assistant.php?version=2&amp;browser=ie" rel="noopener">Internet Explorer 11 Plugin</a></li>
+                  </ul>
+
+                  <h2>Accessible Color Tools</h2>
+
+                  <ul>
+                    <li><a href="https://chrome.google.com/webstore/detail/accessible-color-picker/bgfhbflmeekopanooidljpnmnljdihld" rel="noopener">Accessible Color Picker for Chrome</a></li>
+                    <li><a href="https://www.levelaccess.com/reference/index.php/Color-Contrast-Checker" rel="noopener">Color Contrast Checker</a></li>
+                  </ul>
+
+              </li>
             </ul>
 
           </div>
@@ -348,12 +453,15 @@
 
           <div class="disclosure-multiple__content">
 
+            <h2>Radancy</h2>
+
             <ul>
-              <li><a href="https://amp.levelaccess.net/login.php">Level Access AMP</a></li>
-              <li><a href="https://radancy.dev/a11y/baseline/">Radancy Accessibility Testing Baselines</a></li>
-              <li><a href="https://radancy.dev/a11y/testing/boilerplate/">Radancy Testing Boilerplate</a></li>
-              <li><a href="https://radancy.dev/uid/code-standards/">Radancy User Interface Standards and Guidelines</a></li>
+              <li><a href="https://radancy.dev/a11y/baseline/">Accessibility Testing Baselines</a></li>
+              <li><a href="https://radancy.dev/a11y/testing/boilerplate/">Testing Boilerplate</a></li>
+              <li><a href="https://radancy.dev/uid/code-standards/">User Interface Standards and Guidelines</a></li>
             </ul>
+
+            <h2>
 
           </div>
 
@@ -364,6 +472,11 @@
     </div>
 
     <!-- h2>Bookmarklets</h2>
+
+    <ul>
+      <li><button class="alert-dialoge" data-script="a11y-smoketest-textspace">Text Space</button></li>
+      <li><button data-script="https://mraccess77.github.io/favlets/duplicateIds.js">Duplicate ID</button></li>
+    </ul>
 
     <ul>
       <li><button data-script="https://rawgit.com/pauljadam/bookmarklets/master/aria.js">ARIA</button></li>
@@ -385,8 +498,6 @@
   </main>
 
   <footer>
-
-    <p><small>Special thanks to <a href="https://pauljadam.com/bookmarklets/index.html">Paul J. Adams</a> and <a href="https://github.com/mraccess77/mraccess77.github.io/tree/master/favlets">Jonathan Avila</a>, whose bookmarklets contributed to this extension.</small></p>
 
     <p><small>&copy; 2021 Radancy. An equal opportunity employer.</small></p>
 
